--- a/res/layout/fragment_gpu.xml
+++ b/res/layout/fragment_gpu.xml
@@ -17,72 +17,38 @@
         android:paddingBottom="8dp"
         android:paddingLeft="8dp"
         android:paddingRight="8dp"
-        android:paddingTop="8dp" >
-
-    </Switch>
+        android:paddingTop="8dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-
-    <TextView
-        android:id="@+id/fragment_gpu_tv1"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="4dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="0dp"
-        android:layout_marginTop="28dp"
-        android:paddingBottom="4dp"
-        android:paddingLeft="8dp"
-        android:paddingRight="8dp"
-        android:paddingTop="8dp"
-        android:textAppearance="?android:attr/textAppearanceMedium" >
-    </TextView>
+		>
 
-    <TextView
-        android:id="@+id/fragment_gpu_bt1"
-        android:layout_width="28dp"
-        android:layout_height="28dp"
-        android:layout_gravity="center"
-        android:layout_marginBottom="4dp"
-        android:layout_marginLeft="0dp"
-        android:layout_marginRight="0dp"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/shape_round_rect"
-        android:gravity="center"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+    	<TextView
+        	android:id="@+id/fragment_gpu_tv1"
+        	android:layout_width="wrap_content"
+        	android:layout_height="wrap_content"
+        	android:layout_marginBottom="4dp"
+        	android:layout_marginLeft="8dp"
+        	android:layout_marginRight="0dp"
+        	android:layout_marginTop="28dp"
+        	android:paddingBottom="4dp"
+        	android:paddingLeft="8dp"
+        	android:paddingRight="5dp"
+        	android:paddingTop="8dp"
+        	android:textAppearance="?android:attr/textAppearanceMedium" />
 
-    <TextView
-        android:id="@+id/fragment_gpu_tv2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="4dp"
-        android:layout_marginLeft="1dp"
-        android:layout_marginRight="1dp"
-        android:layout_marginTop="28dp"
-        android:background="@drawable/shape_round_rect"
-        android:paddingBottom="8dp"
-        android:paddingLeft="24dp"
-        android:paddingRight="24dp"
-        android:paddingTop="8dp"
-        android:textAppearance="?android:attr/textAppearanceMedium" >
-    </TextView>
+    	<com.xdaid.gpucontrol.ValuePicker
+        	android:id="@+id/fragment_gpu_vp1"
+        	android:layout_width="132dp"
+        	android:layout_height="56dp"
+        	android:layout_gravity="center_vertical"
+			android:layout_marginBottom="2dp"
+			android:layout_marginLeft="0dp"
+			android:layout_marginRight="0dp"
+			android:layout_marginTop="16dp" />
 
-    <TextView
-        android:id="@+id/fragment_gpu_bt2"
-        android:layout_width="28dp"
-        android:layout_height="28dp"
-        android:layout_gravity="center"
-        android:layout_marginBottom="4dp"
-        android:layout_marginLeft="0dp"
-        android:layout_marginRight="4dp"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/shape_round_rect"
-        android:gravity="center"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
-
-    </LinearLayout>
+	</LinearLayout>
 
     <TextView
         android:id="@+id/fragment_gpu_bt3"
