--- a/res/layout/fragment_gpu.xml
+++ b/res/layout/fragment_gpu.xml
@@ -26,24 +26,22 @@
 
     	<TextView
         	android:id="@+id/fragment_gpu_tv1"
-        	android:layout_width="wrap_content"
-        	android:layout_height="wrap_content"
-        	android:layout_marginBottom="4dp"
-        	android:layout_marginLeft="8dp"
+        	android:layout_width="156dp"
+        	android:layout_height="56dp"
+   			android:layout_gravity="center_vertical"
+			android:layout_marginBottom="6dp"
+        	android:layout_marginLeft="16dp"
         	android:layout_marginRight="0dp"
-        	android:layout_marginTop="28dp"
-        	android:paddingBottom="4dp"
-        	android:paddingLeft="8dp"
-        	android:paddingRight="5dp"
-        	android:paddingTop="8dp"
+        	android:layout_marginTop="16dp"
+			android:gravity="center_vertical"
         	android:textAppearance="?android:attr/textAppearanceMedium" />
 
     	<com.xdaid.gpucontrol.ValuePicker
         	android:id="@+id/fragment_gpu_vp1"
-        	android:layout_width="132dp"
-        	android:layout_height="56dp"
+        	android:layout_width="136dp"
+        	android:layout_height="52dp"
         	android:layout_gravity="center_vertical"
-			android:layout_marginBottom="2dp"
+			android:layout_marginBottom="4dp"
 			android:layout_marginLeft="0dp"
 			android:layout_marginRight="0dp"
 			android:layout_marginTop="16dp" />
@@ -52,17 +50,15 @@
 
     <TextView
         android:id="@+id/fragment_gpu_bt3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="4dp"
+        android:layout_width="124dp"
+        android:layout_height="52dp"
+		android:layout_gravity="center_vertical"
+        android:layout_marginBottom="0dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginRight="8dp"
+        android:layout_marginRight="0dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/shape_round_rect"
-        android:paddingBottom="8dp"
-        android:paddingLeft="36dp"
-        android:paddingRight="36dp"
-        android:paddingTop="8dp"
+		android:gravity="center"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
 </LinearLayout>
